@@ -1575,16 +1575,19 @@ size=224
 213/name = "Reaction (other)"
 213/reaction_class = reaction_other
 213/type = PRESSING
-214/name = "Unknown"
-215/name = "Unknown"
+214/name = "Unknown Job"
+215/name = "Unknown Job"
 216/name = "Shear Creature"
 216/type = SPINNING
 217/name = "Spin Thread"
 217/type = SPINNING
-218/name = "Unknown"
-219/name = "Unknown"
-220/name = "Unknown"
-221/name = "Unknown"
+218/name = "Pen/Pasture Large Animal"
+218/type = ANIMAL
+219/name = "Pen/Pasture Small Animal"
+219/type = ANIMAL
+220/name = "Unknown Job"
+221/name = "Forge Tool"
+221/type = FURNACE
 222/name = "Collect Clay"
 222/type = POTTERY
 223/name = "Install Colony In Hive"
