@@ -8,7 +8,7 @@ translation_vector=0x0171eab0
 language_vector=0x0171ea90
 creature_vector=0x016da478
 dwarf_race_index=0x01506c28
-squad_vector=0x01718768
+squad_vector=0x01718758
 
 [offsets]
 word_table=0x0000003c
